feat: implement phase 2 step 2.4 frontend
